2013-06-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Browser.wrl: 

2013-06-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Browser.wrl: 

2013-06-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* BrowserOptions.wrl:
	* BrowserProperties.wrl:
	* RenderingProperties.wrl: 

2013-06-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.js:
	* createX3DFromURL.wrl: 

2013-06-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* QuadSet.wrl:
	* IndexedQuadSet.wrl:
	* IndexedTriangleSet.wrl:
	* IndexedTriangleFanSet.wrl:
	* IndexedTriangleStripSet.wrl: 

2013-05-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* wtc.wrl:
	* facade.wrl:
	* test.wrl:
	* facade.wrl.gz:
	* SimpleExternproto.wrl:
	* TriangleFanSet.wrl:
	* Int_proto.wrl:
	* Random_proto.wrl: 

2013-05-31  Holger Seelig  <holger.seelig@yahoo.de>

	* TriangleFanSet.wrl: 

2013-05-31  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* wtc.wrl:
	* wtc.wrl.gz:
	* TriangleStripSet.wrl: 

2013-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* TouchSensor.wrl: 

2013-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* DAM.wrl:
	* IBC.wrl:
	* RAM4.wrl:
	* Revit1.wrl:
	* ramcis2.wrl:
	* Stadium.wrl:
	* Bentley1.wrl:
	* CADstudio.wrl:
	* Preheat48.wrl:
	* GoldenGate.wrl:
	* AISC_Sculpture_J.wrl:
	* TrainingStructure.wrl: 

2013-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* TriangleStripSet.wrl: 

2013-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* TriangleFanSet.wrl: 

2013-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* TriangleSet.wrl:
	* TriangleFanSet.wrl:
	* SquadOrientationInterpolator.wrl:
	* ComposeSFVec2f.wrl:
	* ComposeSFVec3f.wrl: 

2013-05-27  Holger Seelig  <holger.seelig@yahoo.de>

	* SquadOrientationInterpolator.wrl: 

2013-05-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* ParticleShape.wrl:
	* OrientationInterpolator.wrl: