@@ -8,6 +8,10 @@
 
 2013-06-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Browser.wrl: 
+
+2013-06-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* BrowserOptions.wrl:
 	* BrowserProperties.wrl:
